--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <button id="scissor" onclick="playHuman('rock')">&#9996</button>
       </div>
       <p class="result"> </p>
-        <p class="your-score">Sua pontuacao : <span id="human-score">0</span></p>
-        <p class="machine-score">Pontuacao Scarlet 🙋‍♀️ : <span id="scarlet-score">0</span></p>
+        <p class="your-score">Sua pontuação : <span id="human-score">0</span></p>
+        <p class="machine-score">Pontuação Scarlet 🙋‍♀️ : <span id="scarlet-score">0</span></p>
 </div>
         
     </div>
